<?xml version="1.0"?>
<package format="2">
  <name>pid_controller</name>
  <version>0.1.0</version>
  <description>PID Controller designed for use with the Clearpath Husky robot</description>

  <maintainer email="aarozberger@gmail.com">Aaron Berger</maintainer>

  <license>BSD</license>

  <author email="aaronzberger@gmail.com">Aaron Berger</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
